AHHHHHH NOTHING WORKS

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<!--
+
 
 <h1>MY TO DO LIST!</h1>
 
@@ -6,7 +6,7 @@
 <!--
 <ul>
   {{#each toDo}}
-    {{#unless this.burger}}
+    {{#unless this.burger}}c
       <li>
         {{this.name}}
 
@@ -73,5 +73,3 @@
   <button type="submit">Add Task</button>
 </form>
 
-
--->
