--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
           <button type="submit">COMPLETED!</button>
         </form>
 
-        <!--{{> burger/delete-burger}} -->
+        {{> burgers/delete-burger}}
       </li>
     {{/unless}}
   {{/each}}
@@ -36,7 +36,7 @@
           <button type="submit">INCOMPLETE!</button>
         </form>
 
-<!--        {{> burgers/delete-burger}}  -->
+        {{> burgers/delete-burger}} 
       </li>
     {{/if}}
   {{/each}}
