--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,8 @@
   {{#each burgers}}
     {{#unless this.incomplete}}
       <li>
-        {{this.task}}
+       <p class= "toDo"> {{this.ID}} {{this.task}} </p>
+            <p> Created : {{this.date}} </p>
 
         <form action="burgers/update/{{this.ID}}?_method=PUT" method="POST">
           <input type="hidden" name="incomplete" value="true">
@@ -29,7 +30,10 @@
   {{#each burgers}}
     {{#if this.incomplete}}
       <li>
+        {{this.ID}}
         {{this.task}}
+                {{this.completed}}
+                        {{this.date}}
 
         <form action="burgers/update/{{this.ID}}?_method=PUT" method="POST">
           <input type="hidden" name="status" value="false">
