server,database,handlebars,HTMLcSSWork,BUTTON's NEED DEBUGGING

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -49,7 +49,7 @@
 </ul>
 
 <h3>Add a TASK</h3>
-<form class="create-update-form" action="burgers/create" method="POST">
+<form class="create-update-form" id= "addTask" action="burgers/create" method="POST">
 
   <div class="form-group">
     <label for="ta">TASK:</label>
